Changelog
=========

8.7-dev - (unreleased)
----------------------
* Feature: Added possibility to use specific ZPT macro while exporting PDF body
  (e.g. content-core)
  [voineali refs #22686]

8.6 - (2014-12-23)
------------------
* Bug fix: Use *with* statement with temporary files in order to ensure that they
  are safely closed before exit
  [voineali refs #22080]
* Bug fix: While creating authentication cookie-jar, also be aware of
  CDN resources
  [voineali refs #22080]

8.5 - (2014-12-02)
------------------
* Bug fix: Added possibility to define shared temporary directory using os.env
  EEACONVERTER_TEMP in order to avoid surprises while using together with zc.async
  [voineali refs #21958]

8.4 - (2014-11-28)
------------------
* Bug fix: Fixed duplicate cookies when printing collection header/footer by
  using wkhtmltopdf more stable --cookie-jar option than --cookie. This also
  fixed blank page at the beginning of PDF introduced in previous version
  [voineali refs #21958]

8.3 - (2014-11-20)
------------------
* Bug fix: Fixed table of contents page alignment
  [voineali refs #21628]
* Bug fix: Fixed duplicate cookies when printing collection header/footer
  [voineali refs #21628]

8.2 - (2014-10-15)
------------------
* Bug fix: Protect against random wkhtmltopdf Segmentation fault errors and
  retry 3 times to re-generate PDF
  [voineali refs #21149]

8.1 - (2014-10-01)
------------------
* Change: Prefix temporary files with package name: eea.converter.
  [voineali refs #21100]

8.0 - (2014-09-15)
------------------
* Feature: Possibility to run a PDF conversion job in safe mode (default) or not
  (raise all errors)
  [voineali refs #20845]
* Change: Changed download.pdf API in order to allow dry-run used by async jobs
  [voineali refs #20843]
* Change: Made @@pdf.support/can_download accessible from URL
  [voineali refs #20846]

7.1 - (2014-08-12)
------------------
* Bug fix: Align PDF Table of Contents trailing dotted with page number