@@ -8,3 +8,11 @@ class ISupport(Interface):
     def can_download():
         """ Can download item as PDF
         """
+
+    def async():
+        """ Download PDF asynchronously or not.
+        """
+
+    def email():
+        """ Current user email
+        """
