@@ -3,6 +3,8 @@ Changelog
 
 8.7-dev - (unreleased)
 ----------------------
+* Feature: Update ISupport API with async and email methods
+  [voineali refs #22971]
 * Feature: Added possibility to use specific ZPT macro while exporting PDF body
   (e.g. content-core)
   [voineali refs #22686]
